Made changes to file paths and rearrranged foildes in the folders and also renamed some files for easy navigation.

--- a/team assignment/Charlene.html
+++ b/team assignment/Charlene.html
@@ -200,7 +200,7 @@
   </section>
 
   <section id="about">
-    <img src="C:\Users\HP\OneDrive\Desktop\CFPhoto.jpg" alt="Charlene's Photo">
+    <img src="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/CFPhoto.jpg" alt="Charlene's Photo">
     <h2>About Me</h2>
     <p>Computer Science Senior at Ashesi University | Front-end Developer | Creative Mind.</p>
     <button>Download CV</button>
