added adashboard and homepage and also fixed the links in the respective pages .

--- a/team assignment/Glenn.html
+++ b/team assignment/Glenn.html
@@ -12,11 +12,10 @@
     <header>
         <div class="header-content">
             <h1>Glenn Bartels Odoom</h1>
-            <a href="index.html" class="back-button">
-                <i class="fas fa-arrow-left"></i>
-                Back to Team
+            <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/dashboard.html" class="back-button">
+                <i class="fas fa-arrow-left"></i> Back to Team
             </a>
-        </div>
+            
     </header>
 
     <main class="profile-container">
@@ -80,6 +79,7 @@
             </div>
         </div>
     </main>
+    
 
     <footer>
         <p>&copy; 2024 Glenn Odoom. All rights reserved.</p>
