--- a/team assignment/Charlene.html
+++ b/team assignment/Charlene.html
@@ -185,11 +185,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/dashboard.html">BACK TO HOME</a></li>
       </ul>
     </nav>
   </header>
