--- a/team assignment/Patricia.html
+++ b/team assignment/Patricia.html
@@ -171,11 +171,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/dashboard.html">BACK TO HOME</a></li>
             </ul>
         </nav>
     </header>
