added an index page which was part of the requirement

--- a/team assignment/Glenn.html
+++ b/team assignment/Glenn.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-content">
             <h1>Glenn Bartels Odoom</h1>
-            <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/dashboard.html" class="back-button">
+            <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/index.html" class="back-button">
                 <i class="fas fa-arrow-left"></i> Back to Team
             </a>
             
