--- a/team assignment/index.html
+++ b/team assignment/index.html
@@ -153,7 +153,7 @@
     <aside class="sidebar">
         <div class="sidebar-header">Dashboard</div>
         <ul class="sidebar-menu">
-            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/dashboard.html">Home</a></li>
+            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/index.html">Home</a></li>
             <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/Charlene.html">Charlene</a></li>
             <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/Emmanuel.html">Emmanuel</a></li>
             <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/Glenn.html">Glenn</a></li>
