final changes to  the file path to properly connect all webpages on the github deployment

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
     <aside class="sidebar">
         <div class="sidebar-header">Dashboard</div>
         <ul class="sidebar-menu">
-            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/index.html">Home</a></li>
-            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team management/Charlene.html">Charlene</a></li>
-            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/Emmanuel.html">Emmanuel</a></li>
-            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/Glenn.html">Glenn</a></li>
-            <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/Patricia.html">Patricia</a></li>
+            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/home.html">Home</a></li>
+            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Charlene.html">Charlene</a></li>
+            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Emmanuel.html">Emmanuel</a></li>
+            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Glenn.html">Glenn</a></li>
+            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Patricia.html">Patricia</a></li>
         </ul>
     </aside>
 
@@ -170,19 +170,19 @@
         <div class="dashboard-grid">
             <div class="card">
                 <h2>Charlene</h2>
-                <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team management/Charlene.html">View Charlene's Page</a>
+                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Charlene.html">View Charlene's Page</a>
             </div>
             <div class="card">
                 <h2>Emmanuel</h2>
-                <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/Emmanuel.html">View Emmanuel's Page</a>
+                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Emmanuel.html">View Emmanuel's Page</a>
             </div>
             <div class="card">
                 <h2>Glenn</h2>
-                <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/Glenn.html">View Glenn's Page</a>
+                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Glenn.html">View Glenn's Page</a>
             </div>
             <div class="card">
                 <h2>Patricia</h2>
-                <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/Patricia.html">View Patricia's Page</a>
+                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Patricia.html">View Patricia's Page</a>
             </div>
         </div>
     </div>
