--- a/Charlene.html
+++ b/Charlene.html
@@ -185,7 +185,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/index.html">BACK TO HOME</a></li>
+        <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/index.html">BACK TO HOME</a></li>
       </ul>
     </nav>
   </header>
@@ -196,7 +196,7 @@
   </section>
 
   <section id="about">
-    <img src="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/CFPhoto.jpg" alt="Charlene's Photo">
+    <img src="https://eliokine.github.io/Continous-Delivery-Integration/CFPhoto.jpg" alt="Charlene's Photo">
     <h2>About Me</h2>
     <p>Computer Science Senior at Ashesi University | Front-end Developer | Creative Mind.</p>
     <button>Download CV</button>
