--- a/Glenn.html
+++ b/Glenn.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-content">
             <h1>Glenn Bartels Odoom</h1>
-            <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/index.html" class="back-button">
+            <a href="https://eliokine.github.io/Continous-Delivery-Integration/index.html" class="back-button">
                 <i class="fas fa-arrow-left"></i> Back to Team
             </a>
             
