--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="sidebar-header">Dashboard</div>
         <ul class="sidebar-menu">
             <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/home.html">Home</a></li>
-            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Charlene.html">Charlene</a></li>
+            <li><a href="Charlene.html">Charlene</a></li>
             <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Emmanuel.html">Emmanuel</a></li>
             <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Glenn.html">Glenn</a></li>
             <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Patricia.html">Patricia</a></li>
@@ -170,7 +170,7 @@
         <div class="dashboard-grid">
             <div class="card">
                 <h2>Charlene</h2>
-                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Charlene.html">View Charlene's Page</a>
+                <a href="Charlene.html">View Charlene's Page</a>
             </div>
             <div class="card">
                 <h2>Emmanuel</h2>
