final changes to rectify previous errors

--- a/Charlene.html
+++ b/Charlene.html
@@ -185,7 +185,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/index.html">BACK TO HOME</a></li>
+        <li><a href="index.html">BACK TO HOME</a></li>
       </ul>
     </nav>
   </header>
