--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
     <aside class="sidebar">
         <div class="sidebar-header">Dashboard</div>
         <ul class="sidebar-menu">
-            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/home.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="Charlene.html">Charlene</a></li>
-            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Emmanuel.html">Emmanuel</a></li>
-            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Glenn.html">Glenn</a></li>
-            <li><a href="https://eliokine.github.io/Continous-Delivery-Integration/Patricia.html">Patricia</a></li>
+            <li><a href="Emmanuel.html">Emmanuel</a></li>
+            <li><a href="Glenn.html">Glenn</a></li>
+            <li><a href="Patricia.html">Patricia</a></li>
         </ul>
     </aside>
 
@@ -174,15 +174,15 @@
             </div>
             <div class="card">
                 <h2>Emmanuel</h2>
-                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Emmanuel.html">View Emmanuel's Page</a>
+                <a href="Emmanuel.html">View Emmanuel's Page</a>
             </div>
             <div class="card">
                 <h2>Glenn</h2>
-                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Glenn.html">View Glenn's Page</a>
+                <a href="Glenn.html">View Glenn's Page</a>
             </div>
             <div class="card">
                 <h2>Patricia</h2>
-                <a href="https://eliokine.github.io/Continous-Delivery-Integration/Patricia.html">View Patricia's Page</a>
+                <a href="Patricia.html">View Patricia's Page</a>
             </div>
         </div>
     </div>
