deploy: 4aeb46fbbc4b872505eb469014302f14caff1b65

--- a/Charlene.html
+++ b/Charlene.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Charlene's Portfolio</title>
   <style>
-    /* Reset default styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -14,7 +13,7 @@
     }
 
     body {
-      background-color: #FAF3F0; /* Light beige */
+      background-color: #FAF3F0;
       color: #4A4A4A;
       line-height: 1.6;
       font-size: 16px;
@@ -23,7 +22,7 @@
 
     /* Header */
     header {
-      background-color: #FADADD; /* Pastel pink */
+      background-color: #FADADD; 
       padding: 1rem;
       text-align: center;
     }
@@ -43,12 +42,12 @@
     }
 
     nav ul li a:hover {
-      color: #C27BA0; /* Muted mauve */
+      color: #C27BA0;
     }
 
     /* Hero Section */
     .hero {
-      background-color: #FAE1E1; /* Light pastel pink */
+      background-color: #FAE1E1;
       text-align: center;
       padding: 5rem 2rem;
     }
@@ -65,7 +64,7 @@
 
     /* About Section */
     #about {
-      background-color: #FFF7F1; /* Light beige */
+      background-color: #FFF7F1;
       padding: 3rem 2rem;
       text-align: center;
     }
@@ -185,7 +184,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/index.html">BACK TO HOME</a></li>
+        <li><a href="index.html">BACK TO HOME</a></li>
       </ul>
     </nav>
   </header>
@@ -196,9 +195,9 @@
   </section>
 
   <section id="about">
-    <img src="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/CFPhoto.jpg" alt="Charlene's Photo">
+    <img src="https://eliokine.github.io/Continous-Delivery-Integration/CFPhoto.jpg" alt="Charlene's Photo">
     <h2>About Me</h2>
-    <p>Computer Science Senior at Ashesi University | Front-end Developer | Creative Mind.</p>
+    <p>Computer Science Senior at Ashesi University | Front-end Developer | Creative.</p>
     <button>Download CV</button>
   </section>
 
