--- a/Emmanuel.html
+++ b/Emmanuel.html
@@ -160,7 +160,7 @@
 <body>
     <div class="profile-container">
         <div style="text-align: center; margin-top: 20px;">
-            <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/index.html" style="text-decoration: none; color: white; display: inline-flex; align-items: center; gap: 0.5rem; font-weight: 500; padding: 0.5rem 1rem; border-radius: 8px; background-color: #4f46e5; transition: all 0.3s ease;">
+            <a href="index.html" style="text-decoration: none; color: white; display: inline-flex; align-items: center; gap: 0.5rem; font-weight: 500; padding: 0.5rem 1rem; border-radius: 8px; background-color: #4f46e5; transition: all 0.3s ease;">
                 <i class="fas fa-arrow-left" style="font-size: 1.2rem; color: white;"></i> BACK TO HOME
             </a>
         </div>
@@ -173,7 +173,7 @@
 
         <!-- Profile Image -->
         <div class="profile-image-container">
-            <img src="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/Emmapic.jpeg" alt="Emmanuel Okine" class="profile-image">
+            <img src="https://eliokine.github.io/Continous-Delivery-Integration/Emmapic.jpeg" alt="Emmanuel Okine" class="profile-image">
         </div>
 
         <!-- Bio -->
