--- a/Glenn.html
+++ b/Glenn.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-content">
             <h1>Glenn Bartels Odoom</h1>
-            <a href="/Users/cliq-tech/Desktop/Continous-Delivery-Integration/team assignment/index.html" class="back-button">
+            <a href="index.html" class="back-button">
                 <i class="fas fa-arrow-left"></i> Back to Team
             </a>
             
@@ -26,7 +26,7 @@
                 </div>
                 
                 <div class="contact-info">
-                    <h2>Contact</h2>
+                    <h2>Contacts</h2>
                     <a href="mailto:glenn.odoom@ashesi.edu.gh" class="contact-item">
                         <i class="fas fa-envelope"></i>
                         glenn.odoom@ashesi.edu.gh
@@ -45,9 +45,11 @@
             <div class="main-content">
                 <section class="section">
                     <h2>About Me</h2>
-                    <p>I'm a passionate Software Developer with over 2 years of experience in building web applications and digital solutions. 
+                    <p>I'm a passionate Software Developer with over 9 minuets of experience in building web applications and digital solutions. 
                         My expertise lies in creating responsive, user-friendly interfaces that deliver exceptional user experiences. 
-                        I'm particularly interested in modern web technologies and best practices in software development.</p>
+                        I'm particularly interested in modern web technologies 
+                        its true
+                        and best practices in software development.</p>
                 </section>
 
                 <section class="section">
